# web-search-fast

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  INSTALL.md  README.md  docker-compose.yml  pyproject.toml
admin-ui/: package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  index.css
admin-ui/src/lib/: api.ts
admin-ui/src/pages/: APIKeys.tsx  Dashboard.tsx  IPMonitor.tsx  Login.tsx  SearchHistory.tsx
scripts/: build-nuitka.sh  mcp-server.sh  test_live.py
src/: auth.py  config.py  main.py  mcp_server.py
src/admin/: database.py  models.py  repository.py  routes.py
src/api/: routes.py  schemas.py
src/core/: search.py
src/engine/: base.py  bing.py  duckduckgo.py  google.py
src/formatter/: json_fmt.py  markdown_fmt.py
src/middleware/: api_key_auth.py  ip_ban.py  search_log.py
src/scraper/: browser.py  depth.py  parser.py
tests/: test_admin_api.py  test_api.py  test_auth.py  test_browser_pool.py  test_core_search.py  test_engine.py  test_formatter.py  test_mcp_server.py  test_middleware.py  test_scraper.py
